<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#6200ee"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.091" />

<!--    <EditText-->
<!--        android:id="@+id/firstnameInput"-->
<!--        android:inputType="text"-->
<!--        android:layout_width="320dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textColor="@android:color/black"-->
<!--        android:background="@drawable/custom_input"-->
<!--        android:paddingStart="12dp"-->
<!--        android:paddingEnd="12dp"-->
<!--        android:padding="12dp"-->
<!--        android:drawableLeft="@drawable/ic_user"-->
<!--        android:drawablePadding="12dp"-->
<!--        android:hint="@string/firstName"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
<!--        app:layout_constraintVertical_bias="0.085" />-->

<!--    <EditText-->
<!--        android:id="@+id/lastnameInput"-->
<!--        android:layout_width="320dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/custom_input"-->
<!--        android:drawableLeft="@drawable/ic_user"-->
<!--        android:drawablePadding="12dp"-->
<!--        android:hint="@string/lastName"-->
<!--        android:inputType="text"-->
<!--        android:padding="12dp"-->
<!--        android:paddingStart="12dp"-->
<!--        android:paddingEnd="12dp"-->
<!--        android:textColor="@android:color/black"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.505"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/firstnameInput"-->
<!--        app:layout_constraintVertical_bias="0.057" />-->

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:hint="@string/promptUserName"
        android:inputType="text"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.111" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:hint="@string/promptPassword"
        android:inputType="textPassword"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_buttons"
        android:backgroundTint="#3949AB"
        android:text="@string/buttonSubmit"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="0.298" />

    <TextView
        android:id="@+id/hasaccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backToHomePage"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn"
        app:layout_constraintVertical_bias="0.242" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo2_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>